--- a/scss/layouts/board/_buttons.scss
+++ b/scss/layouts/board/_buttons.scss
@@ -1,7 +1,5 @@
 .game {
   &__buttons {
-    overflow: hidden;
-
     position: absolute;
     top: em(630px);
     left: em(108px);
